[metadata]
name = integrationtest
version = 1.8.2
url = https://github.com/DUNE-DAQ/integrationtest
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = integrationtest
package_dir = =python
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

